clients/include/rocblas_fortran.hpp

// asum_batched
rocblas_status rocblas_sasum_batched_fortran(rocblas_handle     handle,
                                             rocblas_int        n,
                                             const float* const x[],
                                             rocblas_int        incx,
                                             rocblas_int        batch_count,
                                             float*             results);
rocblas_status rocblas_dasum_batched_fortran(rocblas_handle      handle,
                                             rocblas_int         n,
                                             const double* const x[],
                                             rocblas_int         incx,
                                             rocblas_int         batch_count,
                                             double*             results);
rocblas_status rocblas_scasum_batched_fortran(rocblas_handle                     handle,
                                              rocblas_int                        n,
                                              const rocblas_float_complex* const x[],
                                              rocblas_int                        incx,
                                              rocblas_int                        batch_count,
                                              float*                             results);
rocblas_status rocblas_dzasum_batched_fortran(rocblas_handle                      handle,
                                              rocblas_int                         n,
                                              const rocblas_double_complex* const x[],
                                              rocblas_int                         incx,
                                              rocblas_int                         batch_count,
                                              double*                             results);
// asum_strided_batched
rocblas_status rocblas_sasum_strided_batched_fortran(rocblas_handle handle,
                                                     rocblas_int    n,
                                                     const float*   x,
                                                     rocblas_int    incx,
                                                     rocblas_stride stridex,
                                                     rocblas_int    batch_count,
                                                     float*         results);
rocblas_status rocblas_dasum_strided_batched_fortran(rocblas_handle handle,
                                                     rocblas_int    n,
                                                     const double*  x,
                                                     rocblas_int    incx,
                                                     rocblas_stride stridex,
                                                     rocblas_int    batch_count,
                                                     double*        results);
rocblas_status rocblas_scasum_strided_batched_fortran(rocblas_handle               handle,
                                                      rocblas_int                  n,
                                                      const rocblas_float_complex* x,
                                                      rocblas_int                  incx,
                                                      rocblas_stride               stridex,
                                                      rocblas_int                  batch_count,
                                                      float*                       results);
rocblas_status rocblas_dzasum_strided_batched_fortran(rocblas_handle                handle,
                                                      rocblas_int                   n,
                                                      const rocblas_double_complex* x,
                                                      rocblas_int                   incx,
                                                      rocblas_stride                stridex,
                                                      rocblas_int                   batch_count,
                                                      double*                       results);
// nrm2
rocblas_status rocblas_snrm2_fortran(
    rocblas_handle handle, rocblas_int n, const float* x, rocblas_int incx, float* result);
rocblas_status rocblas_dnrm2_fortran(
    rocblas_handle handle, rocblas_int n, const double* x, rocblas_int incx, double* result);
rocblas_status rocblas_scnrm2_fortran(rocblas_handle               handle,
                                      rocblas_int                  n,
                                      const rocblas_float_complex* x,
                                      rocblas_int                  incx,
                                      float*                       result);
rocblas_status rocblas_dznrm2_fortran(rocblas_handle                handle,
                                      rocblas_int                   n,
                                      const rocblas_double_complex* x,
                                      rocblas_int                   incx,
                                      double*                       result);
// nrm2_batched
rocblas_status rocblas_snrm2_batched_fortran(rocblas_handle     handle,
                                             rocblas_int        n,
                                             const float* const x[],
                                             rocblas_int        incx,
                                             rocblas_int        batch_count,
                                             float*             results);
rocblas_status rocblas_dnrm2_batched_fortran(rocblas_handle      handle,
                                             rocblas_int         n,
                                             const double* const x[],
                                             rocblas_int         incx,
                                             rocblas_int         batch_count,
                                             double*             results);
rocblas_status rocblas_scnrm2_batched_fortran(rocblas_handle                     handle,
                                              rocblas_int                        n,
                                              const rocblas_float_complex* const x[],
                                              rocblas_int                        incx,
                                              rocblas_int                        batch_count,
                                              float*                             results);
rocblas_status rocblas_dznrm2_batched_fortran(rocblas_handle                      handle,
                                              rocblas_int                         n,
                                              const rocblas_double_complex* const x[],
                                              rocblas_int                         incx,
                                              rocblas_int                         batch_count,
                                              double*                             results);
// nrm2_strided_batched
rocblas_status rocblas_snrm2_strided_batched_fortran(rocblas_handle handle,
                                                     rocblas_int    n,
                                                     const float*   x,
                                                     rocblas_int    incx,
                                                     rocblas_stride stridex,
                                                     rocblas_int    batch_count,
                                                     float*         results);
rocblas_status rocblas_dnrm2_strided_batched_fortran(rocblas_handle handle,
                                                     rocblas_int    n,
                                                     const double*  x,
                                                     rocblas_int    incx,
                                                     rocblas_stride stridex,
                                                     rocblas_int    batch_count,
                                                     double*        results);